agrage animacion a main

--- a/css/estilo2.css
+++ b/css/estilo2.css
@@ -37,6 +37,11 @@ body{
     justify-content:center;
     align-items:center;
     text-align:right;
+    animation-name: main_background;
+    animation-iteration-count: infinite;
+    animation-timing-function:ease-out;
+    animation-duration: 13s;
+    animation-delay: 10s;
 }
 
 .main__2{
@@ -279,3 +284,13 @@ main div img{
     width:420px;
         }
     }
+
+/* animaciones */
+@keyframes main_background{
+    0%{background-image: url(../assets/img/img1.jpg)}
+    25%{background-image: url(../assets/img/img2.jpg)}
+    50%{background-image: url(../assets/img/img3.jpg)}
+    75%{background-image: url(../assets/img/img4.jpg)}
+    100%{background-image: url(../assets/img/img5.jpg)}
+    
+}
