--- a/css/estilo2.css
+++ b/css/estilo2.css
@@ -304,7 +304,35 @@ footer ul li:hover{
     
     }
 
-header div img:hover{
-    transform: translate(-30px,25px);
-    transform: scale(1.3,1.3);
+#logo:hover{
+animation:transparencia 3s;
+transform: scale(1.2,1.2);
+
+} 
+
+@keyframes transparencia{
+    0%{opacity: 1; }
+    10%{opacity: .75;}
+    20%{opacity: .50;}
+    30%{opacity: .25;}
+    40%{opacity: 0;}
+    50%{opacity: .25;}
+    60%{opacity: .50;}
+    70%{opacity: .75;}
+    80%{opacity: 1;}
+    100%{opacity: 1;
+   
+}
+
+
+
+
+}
+
+@keyframes positionimg{
+    0%{transform: translate(-0px)}
+    25%{transform: translate(-500px)}
+    50%{transform: translate(-750px)}
+    100%{transform: translate(-1000px)}
+    
 }
